// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions GetGenres actioin change store 1`] = `
Object {
  "_persist": Object {
    "rehydrated": true,
    "version": -1,
  },
  "content": Object {
    "details": Object {},
    "genres_array": undefined,
    "page": 1,
    "results": Array [],
    "total_pages": 12,
    "total_results": 55,
    "video_url": "",
  },
}
`;

exports[`actions GetVideoUrl actioin change store 1`] = `
Object {
  "_persist": Object {
    "rehydrated": true,
    "version": -1,
  },
  "content": Object {
    "details": Object {},
    "genres_array": undefined,
    "page": 1,
    "results": Array [],
    "total_pages": 12,
    "total_results": 55,
    "video_url": "test_url",
  },
}
`;

exports[`actions SearchData actioin change store 1`] = `
Object {
  "_persist": Object {
    "rehydrated": true,
    "version": -1,
  },
  "content": Object {
    "details": Object {},
    "genres_array": Array [],
    "page": 1,
    "results": Array [],
    "total_pages": 12,
    "total_results": 55,
    "video_url": "",
  },
}
`;

exports[`actions getDetails actioin change store 1`] = `
Object {
  "_persist": Object {
    "rehydrated": true,
    "version": -1,
  },
  "content": Object {
    "details": Object {
      "id": 14030,
      "overview": "Lorem Ipsum is simply dummy text of the printing",
      "poster": "image_path",
      "runtime": 120,
      "title": "Sopranos",
      "vote_average_ids": 10,
    },
    "genres_array": undefined,
    "page": 1,
    "results": Array [],
    "total_pages": 12,
    "total_results": 55,
    "video_url": "test_url",
  },
}
`;
